# ReadmeAI

./: README.md  pyproject.toml
readmeai/components/: init.py  run.py
readmeai/config/: constants.py
readmeai/pipelines/: supervisor.py
readmeai/prompts/: code_summary.txt  final_summary.txt
readmeai/resources/: Python.gitignore
readmeai/utils/: extract.py  llm.py  scanner.py  utils.py
